src/App.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Kaushan+Script&family=Poiret+One&display=swap');

*,
::after,
::before {
  box-sizing: border-box;
}

:root {
  --color-accent: #fff;
  --color-primary: #f73f52;
  --color-secondary: #11a372;
  --color-text: #5b6064;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Josefin Sans", sans-serif;
  color: var(--color-text);
  margin: 0;
  padding: 0;
}

